ecsdb_cli/src/bin/snapshots/ecsdb__test__query_filters@all | skip(1).snap
---
source: ecsdb_cli/src/bin/ecsdb.rs
description: "Pipeline::parse(\"all | skip(1)\")"
expression: "Pipeline::parse(pipeline)"
---
Ok(
    Pipeline {
        stages: [
            All,
            Skip(
                1,
            ),
        ],
    },
)
