ecsdb_cli/src/bin/snapshots/ecsdb__test__query_filters@all | take(23).snap
---
source: ecsdb_cli/src/bin/ecsdb.rs
description: "Pipeline::parse(\"all | take(23)\")"
expression: "Pipeline::parse(pipeline)"
---
Ok(
    Pipeline {
        stages: [
            All,
            Take(
                23,
            ),
        ],
    },
)
