ecsdb_cli/src/bin/snapshots/ecsdb__test__query_filters@all.snap
---
source: ecsdb_cli/src/bin/ecsdb.rs
description: "Pipeline::parse(\"all\")"
expression: "Pipeline::parse(pipeline)"
---
Ok(
    Pipeline {
        stages: [
            All,
        ],
    },
)
