ecsdb_cli/src/bin/snapshots/ecsdb__test__query_filters@all|filter(data == 1.5e2).snap
---
source: ecsdb_cli/src/bin/ecsdb.rs
description: "Pipeline::parse(\"all|filter(data == 1.5e2)\")"
expression: "Pipeline::parse(pipeline)"
---
Ok(
    Pipeline {
        stages: [
            All,
            Filter(
                Eq {
                    column: Data,
                    op: Eq,
                    value: FilterValue(
                        Number(150.0),
                    ),
                },
            ),
        ],
    },
)
