ecsdb_cli/src/bin/snapshots/ecsdb__test__query_filters@all|filter(data == [1,2,3]).snap
---
source: ecsdb_cli/src/bin/ecsdb.rs
description: "Pipeline::parse(\"all|filter(data == [1,2,3])\")"
expression: "Pipeline::parse(pipeline)"
---
Ok(
    Pipeline {
        stages: [
            All,
            Filter(
                Eq {
                    column: Data,
                    op: Eq,
                    value: FilterValue(
                        Array [
                            Number(1),
                            Number(2),
                            Number(3),
                        ],
                    ),
                },
            ),
        ],
    },
)
