ecsdb_cli/src/bin/snapshots/ecsdb__test__query_filters@all|filter(data == [{"a":1},{"a":2}]).snap
---
source: ecsdb_cli/src/bin/ecsdb.rs
description: "Pipeline::parse(\"all|filter(data == [{\"a\":1},{\"a\":2}])\")"
expression: "Pipeline::parse(pipeline)"
---
Ok(
    Pipeline {
        stages: [
            All,
            Filter(
                Eq {
                    column: Data,
                    op: Eq,
                    value: FilterValue(
                        Array [
                            Object {
                                "a": Number(1),
                            },
                            Object {
                                "a": Number(2),
                            },
                        ],
                    ),
                },
            ),
        ],
    },
)
